--- a/api/package.json
+++ b/api/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "csv-parser": "^3.0.0",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
   },
