--- a/api/package.json
+++ b/api/package.json
@@ -7,8 +7,7 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "node --watch src/index.js",
-    "test": "node --test",
-    "coverage": "c8 npm test"
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +18,7 @@
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
-    "c8": "^10.1.3"
+    "jest": "^30.0.5",
+    "supertest": "^7.1.4"
   }
 }
